--- a/FOU/cssfiles/loginStyle.css
+++ b/FOU/cssfiles/loginStyle.css
@@ -2,7 +2,12 @@
   display: grid;
   grid-template-columns: 0.5fr 1.5fr 1.5fr 0.5fr;
   grid-template-rows: 0.5fr 2fr 0.5fr;
-  grid-template-areas: ". header header ." ". login description ." ". . . .";
+  grid-template-areas: ". header header ." ". description login ." ". . . .";
+  width: 100%;
+  height: 100%;
+  position: relative;
+  left: 50%;
+  right: 50%;
 }
 
 .header
@@ -12,26 +17,37 @@
   grid-template-rows: 1fr;
   grid-template-areas: ".";
   grid-area: header;
-  width: 50%;
-  height: 50%;
+  align-content: center;
 }
-
-.login
+.body
 {
-  grid-area: login;
-  border-style: solid;
-  text-align: center;
-  width: 100%;
-  height: 100%;
+  background-color: black;
+  height: 50%;
+  width: 50%;
+  align-content: center;
 }
 
 .description
 {
   grid-area: description;
-  border-style: solid;
   text-align: center;
   width: 100%;
   height: 100%;
+  background-color: white;
+  border-radius: 10px;
+  text-align: center;
+  color: rgb(0,122,178);
+}
+
+.login
+{
+  grid-area: login;
+  border-radius: 10px;
+  background-color: rgb(0,122,178);
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  color: white;
 }
 
 .left-part
@@ -51,4 +67,33 @@
 
 .image
 {
+  width: 100%;
+}
+
+.button
+{
+  border: none;
+  color: white;
+  padding: 3% 10%;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4% 2%;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.buttonlogin
+{
+  background-color: white;
+  color: black;
+  border: 2px solid #004666;
+}
+
+.buttonlogin:hover
+{
+  background-color: #004666;
+  color: white;
 }
