--- a/FOU/cssfiles/loginStyle.css
+++ b/FOU/cssfiles/loginStyle.css
@@ -21,6 +21,7 @@
 }
 .body
 {
+  font-family: Verdana;
   background-color: black;
   height: 50%;
   width: 50%;
@@ -35,19 +36,39 @@
   height: 100%;
   background-color: white;
   border-radius: 10px;
+  border: solid;
+  border-color:white;
+  border-width: 5px;
   text-align: center;
   color: rgb(0,122,178);
+  position: relative;
+  right: 5%;
+}
+
+input
+{
+  border-radius: 8px;
+}
+
+button
+{
+  border-radius: 8px;
 }
 
 .login
 {
   grid-area: login;
   border-radius: 10px;
+  border: solid;
+  border-color:rgb(0,122,178);
+  border-width: 5px;
   background-color: rgb(0,122,178);
   text-align: center;
   width: 100%;
   height: 100%;
   color: white;
+  position: relative;
+  left: 5%;
 }
 
 .left-part
@@ -68,6 +89,11 @@
 .image
 {
   width: 100%;
+}
+
+.titlu
+{
+  font-size: 25px
 }
 
 .button
@@ -96,4 +122,8 @@
 {
   background-color: #004666;
   color: white;
+}
+.usern
+{
+  margin-top: 50px;
 }
