--- a/FOU/cssfiles/homeStyle.css
+++ b/FOU/cssfiles/homeStyle.css
@@ -1,163 +1,123 @@
+@font-face { font-family: BAUHS93; src: url('fonts/BAUHS93.ttf'); }
+@font-face { font-family: BAUHS93 Regular; src: url('fonts/Bauhaus 93 Regular.ttf'); }
+
 img
 {
-  width: 100%;
-  height: 100%;
-  object-fit: scale-down;
+max-width: 100%;
+max-height: 100%;
 }
 .grid-container {
+  width: 100%;
+  height: 100%;
   display: grid;
-  grid-template-columns: 0.7fr 1.3fr 1fr 1fr;
-  grid-template-rows: 0.3fr 2.5fr 0.2fr;
-  grid-template-areas: "header header header header" "navBar main main main" "footer footer footer footer";
+  grid-template-columns: 0.2fr 1.8fr;
+  grid-template-rows: 0.6fr 2.6fr 0.1fr;
+  grid-template-areas: "header header" "navBar main" "navBar main";
 }
 
 .header {
-  display: grid;
-  grid-template-columns: 0.4fr 1.7fr 0.9fr;
-  grid-template-rows: 1.1fr 0.9fr;
-  grid-template-areas: "titluLogo titluLogo user" "titluLogo titluLogo user";
-  grid-area: header;
+  width: 100%;
+  height: 100px;
   background-color: #002333;
+  display: grid;
+  grid-template-columns: 0.8fr 1.2fr 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: "title search user";
+  grid-area: header;
 }
 
+.title {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  grid-area: title; }
+
+.search {
+  position: relative;
+  top: 30%;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  grid-area: search; }
+
+  .search input
+  {
+    border-radius: 10px;
+    width: 100%;
+    height: 25%;
+    text-align: center;
+    font-family: monospace;
+  }
+
 .user {
+  width: 100%;
+  height: 100%;
   display: grid;
-  grid-template-columns: 1.5fr 0.5fr;
-  grid-template-rows: 1fr 1fr;
-  grid-template-areas: "numeUser avatar" "numeUser avatar";
+  grid-template-columns: 1.3fr 0.7fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: "username avatar";
   grid-area: user;
 }
 
-.avatar {
-  position: relative;
-  right: 10%;
-  grid-area: avatar;
-  }
-
-.numeUser {
-  position: relative;
-  grid-area: numeUser;
+.username {
+  font-size: 120%;
   color: white;
-  font-family: sans-serif;
-}
+  font-family: monospace;
+  position: relative;
+  top: 38%;
+  left: 79%;
+  width: 100%;
+  height: 100%;
+  grid-area: username; }
 
-.titluLogo {
-  grid-area: titluLogo; }
-
-.footer {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-template-areas: ". language ." ". socialMedia .";
-  grid-area: footer;
-}
-
-.language { grid-area: language; }
-
-.socialMedia {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: ". . .";
-  grid-area: socialMedia;
-}
+.avatar {
+  width: 50%;
+  height: 50%;
+  grid-area: avatar;
+position: relative;
+top: 25%;}
 
 .navBar {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 0.3fr 0.4fr 0.4fr 0.4fr 0.4fr 4.1fr;
-  grid-template-areas: "search search search" "upload upload upload" "recent recent recent" "favorite favorite favorite" "yourFiles yourFiles yourFiles" ". . .";
-  grid-area: navBar;
+background-color: #004666;
+height:  400%;
+grid-area: navBar; }
+
+.navBar p
+{
+  font-size:140%;
+  font-family: monospace;
+  position: relative;
+  left: 15%;
+  color: white;
 }
-
-.search { grid-area: search; }
-
-.upload {
-  display: grid;
-  grid-template-columns: 0.7fr 1.3fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: "icon text";
-  grid-area: upload;
-}
-
-.icon { grid-area: icon; }
-
-.text { grid-area: text; }
-
-.recent {
-  display: grid;
-  grid-template-columns: 0.7fr 1.3fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: "iconRecent textRecent";
-  grid-area: recent;
-}
-
-.textRecent { grid-area: textRecent; }
-
-.iconRecent { grid-area: iconRecent; }
-
-.favorite {
-  display: grid;
-  grid-template-columns: 0.7fr 1.3fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: "favIcon textFav";
-  grid-area: favorite;
-}
-
-.favIcon { grid-area: favIcon; }
-
-.textFav { grid-area: textFav; }
-
-.yourFiles {
-  display: grid;
-  grid-template-columns: 0.7fr 1.3fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: "iconFiles tetFiles";
-  grid-area: yourFiles;
-}
-
-.iconFiles { grid-area: iconFiles; }
-
-.tetFiles { grid-area: tetFiles; }
 
 .main {
-  display: grid;
-  grid-template-columns: 0.4fr 2.3fr 0.3fr;
-  grid-template-rows: 0.2fr 1.8fr;
-  grid-template-areas: ". titluMain ." ". listFisiere .";
-  grid-area: main;
+  background-color: 	#007ab2;
+  width: 100%;
+  height: 400%;
+  grid-area: main; }
+
+.main h1
+{text-align: center;
+  color : black;
+  position: relative;
+  top: 5%;
+  font-family: monospace;
+
 }
 
-.titluMain { grid-area: titluMain; }
-
-.listFisiere {
+.main container {
+  background-color: 	#006999;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 0.9fr 1.1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-areas: "fisier1 fisier1 fisier1" "fisier2 fisier2 fisier2" "fisier3 fisier3 fisier3" "fisier4 fisier4 fisier4" "fisier5 fisier5 fisier5" "fisier6 fisier6 fisier6" "fisier7 fisier7 fisier7" "fisier8 fisier8 fisier8" ". pages .";
-  grid-area: listFisiere;
-}
-
-.pages {
-  display: grid;
-  grid-template-columns: 1.2fr 0.6fr 1.2fr;
+  grid-template-columns: 1.4fr 1.2fr 0.7fr 0.7fr;
   grid-template-rows: 1fr;
-  grid-template-areas: ". . .";
-  grid-area: pages;
+  grid-template-areas: "nume data dimensiune stergere";
 }
 
-.fisier1 { grid-area: fisier1; }
+.main nume { grid-area: nume; }
 
-.fisier2 { grid-area: fisier2; }
+.main data { grid-area: data; }
 
-.fisier3 { grid-area: fisier3; }
+.main stergere { grid-area: stergere; }
 
-.fisier4 { grid-area: fisier4; }
-
-.fisier5 { grid-area: fisier5; }
-
-.fisier6 { grid-area: fisier6; }
-
-.fisier7 { grid-area: fisier7; }
-
-.fisier8 { grid-area: fisier8; }
+.main dimensiune { grid-area: dimensiune; }
