--- a/FOU/cssfiles/homeStyle.css
+++ b/FOU/cssfiles/homeStyle.css
@@ -64,10 +64,10 @@ max-height: 100%;
   color: white;
   font-family: monospace;
   position: relative;
-  top: 38%;
   left: 79%;
   width: 100%;
   height: 100%;
+  top:5%;
   grid-area: username; }
 
 .avatar {
@@ -75,7 +75,7 @@ max-height: 100%;
   height: 50%;
   grid-area: avatar;
 position: relative;
-top: 25%;}
+top: 10%;}
 
 .navBar {
 background-color: #004666;
@@ -92,6 +92,7 @@ grid-area: navBar; }
 }
 
 .main {
+  font-family: monospace;
   background-color: 	#007ab2;
   width: 100%;
   height: 400%;
@@ -106,18 +107,11 @@ grid-area: navBar; }
 
 }
 
-.main container {
-  background-color: 	#006999;
-  display: grid;
-  grid-template-columns: 1.4fr 1.2fr 0.7fr 0.7fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: "nume data dimensiune stergere";
+.main table
+{
+  font-size: 30px;
+  color:white;
+  position: relative;
+  top: 10%;
+  left: 15%;
 }
-
-.main nume { grid-area: nume; }
-
-.main data { grid-area: data; }
-
-.main stergere { grid-area: stergere; }
-
-.main dimensiune { grid-area: dimensiune; }
