--- a/FOU/cssfiles/favouritesStyle.css
+++ b/FOU/cssfiles/favouritesStyle.css
@@ -8,7 +8,7 @@ h1
 
 a
 {
-  text-decoration: none;
+  text-decoration: none
 }
 
 body
@@ -66,7 +66,7 @@ padding: 0;
 .favorites {
   height: 100%;
   width:100%;
-  background-color: #006999;
+  background-color: #002333;
   display: grid;
   grid-template-columns: 0.5fr 1.5fr;
   grid-template-rows: 1fr;
