--- a/FOU/cssfiles/uploadStyle.css
+++ b/FOU/cssfiles/uploadStyle.css
@@ -8,7 +8,7 @@ h1
 
 a
 {
-  text-decoration: none;
+  text-decoration: none
 }
 
 body
@@ -37,7 +37,7 @@ padding: 0;
 .upload {
   height: 100%;
   width:100%;
-  background-color: #004666;
+  background-color: #002333;
   display: grid;
   grid-template-columns: 0.5fr 1.5fr;
   grid-template-rows: 1fr;
