--- a/FOU/cssfiles/resetpassword.css
+++ b/FOU/cssfiles/resetpassword.css
@@ -23,10 +23,12 @@
 
 .body
 {
-  font-family: Verdana;
-  background-color: #002333;
+  font-family: monospace;
+  background: rgb(0,122,178);
+  background: linear-gradient(180deg, rgba(0,122,178,1) 0%, rgba(0,35,51,1) 78%);
   height: 50%;
   width: 50%;
+  font-size: 18px;
   align-content: center;
 }
 
@@ -41,8 +43,8 @@
   grid-area: resetpassword;
   border-radius: 10px;
   border: solid;
-  border-color:rgb(0,122,178);
-  border-width: 5px;
+  border-color:white;
+  border-width: 3px;
   background-color: rgb(0,122,178);
   text-align: center;
   width: 100%;
@@ -85,8 +87,15 @@
 
 input
 {
-  border-radius: 8px;
-  width: 60%
+  font-family: monospace;
+  background-color: #006999;
+  color: white;
+  border-width: 3px;
+  border-style: solid;
+  border-color: white;
+  border-radius: 20px;
+  text-align: center;
+  width: 70%;
 }
 
 button
