--- a/FOU/cssfiles/responsereset.css
+++ b/FOU/cssfiles/responsereset.css
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: 0.5fr 1.5fr 1.5fr 0.5fr;
   grid-template-rows: 0.5fr 2fr 0.5fr;
-  grid-template-areas: ". header header ." ". register register ." ". . . .";
+  grid-template-areas: ". header header ." ". resetpassword resetpassword ." ". . . .";
   width: 100%;
   height: 100%;
   position: relative;
@@ -28,6 +28,7 @@
   background: linear-gradient(180deg, rgba(0,122,178,1) 0%, rgba(0,35,51,1) 78%);
   height: 50%;
   width: 50%;
+  font-size: 18px;
   align-content: center;
 }
 
@@ -37,9 +38,9 @@
 
 .footer { grid-area: footer; }
 
-.register
+.resetpassword
 {
-  grid-area: register;
+  grid-area: resetpassword;
   border-radius: 10px;
   border: solid;
   border-color:white;
@@ -94,9 +95,15 @@ input
   border-color: white;
   border-radius: 20px;
   text-align: center;
+  width: 70%;
 }
 
 button
 {
   border-radius: 8px;
+}
+
+a
+{
+  text-decoration: none;
 }
