--- a/FOU/cssfiles/tagsStyle.css
+++ b/FOU/cssfiles/tagsStyle.css
@@ -1,9 +1,6 @@
 h1
 {
   font-family: monospace;
-   text-decoration-style: solid;
-   -webkit-text-stroke-width: 1px;
-   -webkit-text-stroke-color: #0082c8;
 }
 
 a
@@ -243,4 +240,19 @@ padding: 0;
 }
 
 
-.Main { grid-area: Main; }
+.Main {
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  text-align: center;
+  grid-area: Main; }
+
+  .Main button
+  {
+    font-family: monospace;
+    color: white;
+  background-color: #006999;
+    border-radius: 10px;
+    width:15%;
+    height: 10%;
+  }
