--- a/FOU/cssfiles/myFilesStyle.css
+++ b/FOU/cssfiles/myFilesStyle.css
@@ -6,10 +6,6 @@ h1
    -webkit-text-stroke-color: #0082c8;
 }
 
-a
-{
-  text-decoration: none;
-}
 
 body
 {
@@ -23,7 +19,7 @@ padding: 0;
   display: grid;
   grid-template-columns: 0.8fr 0.8fr 0.8fr 0.8fr 0.8fr 2.8fr;
   grid-template-rows: 0.5fr 0.2fr 2.3fr;
-  grid-template-areas: "LOGO LOGO LOGO LOGO LOGO LOGO" "upload favorites recently my-files tags search" "Main Main Main Main Main Main";
+  grid-template-areas: "LOGO LOGO LOGO LOGO LOGO LOGO" "upload favorites recently my-files tags search" ". . Main Main . .";
 }
 
 .LOGO {
@@ -244,3 +240,40 @@ padding: 0;
 
 
 .Main { grid-area: Main; }
+
+table
+{
+  border-radius: 10px;
+  border-color: #006999;
+  border-style: solid;
+  position: relative;
+  top:15%;
+}
+th
+{
+  border-radius: 2px;
+  border-color: #006999;
+  background-color: #004666;
+  width: 200%;
+  height: 25%;
+}
+tr
+{
+  border-radius: 2px;
+  border-color: #006999;
+  background-color: #004666;
+  font-size: 25px;
+}
+
+.tr1
+{
+  font-size: 35px;
+  font-style: italic;
+  font-weight: bold;
+}
+
+a
+{
+  color: black;
+  text-decoration: none;
+}
