--- a/FOU/cssfiles/homeStyle.css
+++ b/FOU/cssfiles/homeStyle.css
@@ -266,8 +266,8 @@ padding: 0;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  border-width: 3px;
-  border-color: white;
+  border-width: 5px;
+  border-color: black;
   border-radius: 10px;
   background-color: #004666;
   display: grid;
@@ -281,8 +281,8 @@ padding: 0;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  border-width: 3px;
-  border-color: white;
+  border-width: 5px;
+  border-color: black;
   border-radius: 10px;
   background-color: #006999;
   display: grid;
@@ -295,8 +295,8 @@ padding: 0;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  border-width: 3px;
-  border-color: white;
+  border-width: 5px;
+  border-color: black;
   border-radius: 10px;
   background-color: #004666;
   display: grid;
@@ -309,8 +309,8 @@ padding: 0;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  border-width: 3px;
-  border-color: white;
+  border-width: 5px;
+  border-color: black;
   border-radius: 10px;
   background-color: #006999;
   display: grid;
@@ -323,8 +323,8 @@ padding: 0;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  border-width: 3px;
-  border-color: white;
+  border-width: 5px;
+  border-color: black;
   border-radius: 10px;
   background-color: #004666;
   display: grid;
@@ -337,8 +337,8 @@ padding: 0;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  border-width: 3px;
-  border-color: white;
+  border-width: 5px;
+  border-color: black;
   border-radius: 10px;
   background-color: #006999;
   display: grid;
