--- a/FOUv0.5/cssFiles/tagsStyle.css
+++ b/FOUv0.5/cssFiles/tagsStyle.css
@@ -157,7 +157,7 @@ body
 {
   margin: auto;
   text-align: center;
-  font-size: 20px;
+  font-size: 1vw;
   width: 50%;
 }
 
@@ -171,73 +171,8 @@ body
     border-color: #004666;
     background-color: #006999;
     font-family: monospace;
-    font-size: 30px;
+    font-size: 1vw;
     border-radius: 10px;
-    height: 40%;
-    width: 15%;
+    height: 30%;
+    width: 20%;
   }
-
-
-.mainRow {
-  margin:30px;
-  padding: 30px;
-  margin: auto;
-  text-align: center;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 50%;
-  height: 40%;
-}
-
-.mainColumn1 {
-  margin:30px;
-  padding: 30px;
-  color:white;
-  border-radius: 10px;
-  background-color: #004666;
-  font-family: monospace;
-  display: flex;
-  flex-direction: column;
-  width: 25%;
-  flex-basis: 100%;
-  flex: 1;
-}
-
-.mainColumn1 img
-{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.mainColumn2 {
-  margin:30px;
-  padding: 30px;
-  color:white;
-  border-radius: 10px;
-  background-color: #006999;
-  font-family: monospace;
-  display: flex;
-  flex-direction: column;
-  width: 25%;
-  flex-basis: 100%;
-  flex: 1;
-}
-
-.mainColumn2 img
-{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.mainColumn
-{
-  font-family: monospace;
-  display: flex;
-  flex-direction: column;
-  width: 25%;
-  flex-basis: 100%;
-  flex: 1;
-}
