--- a/FOUv1.0/cssFiles/loginStyle.css
+++ b/FOUv1.0/cssFiles/loginStyle.css
@@ -11,6 +11,15 @@ a
 width: 100%;
 height: 100%;
 text-decoration: none;
+color: white;
+}
+
+a:visited
+{
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: black;
 }
 
 input
